--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SESSION & COOKIES</title>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://i.imgur.com/BajoCWe.png">
+    <script src="https://kit.fontawesome.com/47a442944c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
