--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -10,5 +10,4 @@
     <script src="https://kit.fontawesome.com/47a442944c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-<main class="body-box">
+<body style="background-color: <%= locals.user ? locals.user.color : null %>;">
