--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -10,4 +10,4 @@
     <script src="https://kit.fontawesome.com/47a442944c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body style="background-color: <%= locals.user ? locals.user.color : null %>;">
+<body style="background-color: <%= locals.color ? locals.color : null %>;">
