--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -139,5 +139,10 @@
             </button>
         </div>
     </form>
+    <form class="form-footer" action='/goodbye' method="GET">
+        <button class="forget">
+            olvidar color
+        </button>
+    </form>
 </main>
 <%- include ('./partials/footer') %>
