now "forget" also deletes session

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -139,7 +139,7 @@
             </button>
         </div>
     </form>
-    <form class="form-footer" action='/goodbye' method="GET">
+    <form class="form-footer" action='/reset' method="GET">
         <button class="forget">
             olvidar color
         </button>
