--- a/src/views/thanks.ejs
+++ b/src/views/thanks.ejs
@@ -1,6 +1,9 @@
 <%- include ('./partials/head') %>
 <main>
     <% if (locals.user) %>
+        <div class="img-riquelme">
+            <img src="https://i.imgur.com/xCLM18E.jpg">
+        </div>
         <div class="purpose-box">
             <a class="hello-user thank-you-box" href="/">
                 <span class="user-data">
