--- a/src/views/thanks.ejs
+++ b/src/views/thanks.ejs
@@ -10,6 +10,9 @@
                     <%= user.name %>,
                 </span>
                 gracias por visitarnos.
+                <span class="volver">
+                    regresar
+                </span>
             </a>
         </div>
 </main>
